Bug 1689156 - Bring the fast tab switch paint back r=mstange,mattwoodrow

In bug 1669239, we removed the magic paint which would occur during tab
switches, and instead we requested a tick. However, this approach
didn't work well because tick was a heavy operation which did not
only paints but also many other stuff, such as running
requestAnimationFrame handlers, so it made the tab switches slower
under certain conditions.

So here we reverts the changes we made in bug 1669239.

Differential Revision: https://phabricator.services.mozilla.com/D107858